--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,7 @@ add_executable(simplePointCloudLabeller
 )
 
 target_link_libraries(simplePointCloudLabeller PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Widgets ${PCL_LIBRARIES})
+
+install(TARGETS simplePointCloudLabeller RUNTIME DESTINATION usr/bin)
+install(FILES simplePointCloudLabeller.desktop DESTINATION usr/share/applications)
+install(FILES icon/simplePointCloudLabeller.png DESTINATION .)
